objects/Atlas_Order__x.object
<CustomObject>
    <description>Atlas Orders for account</description>
    <externalDataSource>OData_Source</externalDataSource>
    <externalName>VCAGLOM_13_Q001Results</externalName>
    <fields>
        <fullName>Account_Customer__c</fullName>
        <description>StS R8 field from Atlas: MMIGUID__MMIDFGUID_T</description>
        <externalDeveloperName>MMIGUID__MMIDFGUID_T</externalDeveloperName>
        <inlineHelpText>Account Name</inlineHelpText>
        <label>Account Customer</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type_Name__c</fullName>
        <description>StS R8 field from Atlas: MMIGUID__MMICACTYP_T</description>
        <externalDeveloperName>MMIGUID__MMICACTYP_T</externalDeveloperName>
        <inlineHelpText>ABB account type name</inlineHelpText>
        <label>Account Type Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <description>StS R8 field from Atlas: MMIGUID__MMICACTYP</description>
        <externalDeveloperName>MMIGUID__MMICACTYP</externalDeveloperName>
        <inlineHelpText>ABB account type</inlineHelpText>
        <label>Account Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <description>Sts R8 field from Atlas: MCAMGMT__MABBUSUNT</description>
        <externalDeveloperName>MCAMGMT__MABBUSUNT</externalDeveloperName>
        <inlineHelpText>ABB Business Unit</inlineHelpText>
        <label>Business Unit</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <description>StS R8 field from Atlas: MMIGUID__MCACNTRY</description>
        <externalDeveloperName>MMIGUID__MCACNTRY</externalDeveloperName>
        <inlineHelpText>Reporting country code</inlineHelpText>
        <label>Country Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>StS R8 field from Atlas: MMIGUID__MCACNTRY_T</description>
        <externalDeveloperName>MMIGUID__MCACNTRY_T</externalDeveloperName>
        <inlineHelpText>Reporting country name</inlineHelpText>
        <label>Country</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>StS R8 field from Atlas: MCAMGMT__MABDIVIS</description>
        <externalDeveloperName>MCAMGMT__MABDIVIS</externalDeveloperName>
        <inlineHelpText>ABB Division</inlineHelpText>
        <label>Division</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GUID__c</fullName>
        <description>MMIGUID__MMIDFGUID</description>
        <externalDeveloperName>MMIGUID__MMIDFGUID</externalDeveloperName>
        <label>Account</label>
        <length>10</length>
        <referenceTargetField>Account.GUID__c</referenceTargetField>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>VCAGLOM_1_Q032Results</relationshipLabel>
        <relationshipName>VCAGLOM_1_Q032Results</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <description>ID</description>
        <externalDeveloperName>ID</externalDeveloperName>
        <label>ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPLPRD008_MPLPRD001_T_G__c</fullName>
        <description>MPLPRD008__MPLPRD001_T_G</description>
        <externalDeveloperName>MPLPRD008__MPLPRD001_T_G</externalDeveloperName>
        <label>MPLPRD008__MPLPRD001_T_G</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MPLPRD008_MPLPRD001_T_N__c</fullName>
        <description>MPLPRD008__MPLPRD001_T_N</description>
        <externalDeveloperName>MPLPRD008__MPLPRD001_T_N</externalDeveloperName>
        <label>MPLPRD008__MPLPRD001_T_N</label>
        <length>65</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPLPRD008_MPLPRD001_T_O__c</fullName>
        <description>MPLPRD008__MPLPRD001_T_O</description>
        <externalDeveloperName>MPLPRD008__MPLPRD001_T_O</externalDeveloperName>
        <label>MPLPRD008__MPLPRD001_T_O</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPLPRD008_MPLPRD001_T_P__c</fullName>
        <description>MPLPRD008__MPLPRD001_T_P</description>
        <externalDeveloperName>MPLPRD008__MPLPRD001_T_P</externalDeveloperName>
        <label>MPLPRD008__MPLPRD001_T_P</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orders_Loca_Currency__c</fullName>
        <description>StS R8 field from Atlas: ORDERS_LOCAL_E</description>
        <externalDeveloperName>ORDERS_LOCAL_E</externalDeveloperName>
        <inlineHelpText>Order currency</inlineHelpText>
        <label>Orders Local Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orders_Local_Formatted__c</fullName>
        <description>StS R8 field from Atlas: ORDERS_LOCAL_F</description>
        <externalDeveloperName>ORDERS_LOCAL_F</externalDeveloperName>
        <inlineHelpText>Formatted local orders of the account</inlineHelpText>
        <label>Orders Local Formatted</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orders_Local__c</fullName>
        <description>StS R8 field from Atlas: ORDERS_LOCAL</description>
        <externalDeveloperName>ORDERS_LOCAL</externalDeveloperName>
        <inlineHelpText>Local orders of the account</inlineHelpText>
        <label>Orders Local</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Orders_Total_Currency__c</fullName>
        <description>Sts R8 fiield from Atlas: ORDERS_TOTAL_E</description>
        <externalDeveloperName>ORDERS_E</externalDeveloperName>
        <inlineHelpText>Total orders currency of the account</inlineHelpText>
        <label>Orders Total Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orders_Total_Formatted__c</fullName>
        <description>StS R8 field from Atlas: ORDERS_TOTAL_F</description>
        <externalDeveloperName>ORDERS_F</externalDeveloperName>
        <inlineHelpText>Formatted total orders of the account</inlineHelpText>
        <label>Orders Total Formatted</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orders_Total__c</fullName>
        <description>StS R8 field from Atlas: ORDERS_TOTAL</description>
        <externalDeveloperName>ORDERS</externalDeveloperName>
        <inlineHelpText>Total orders ot the accounts</inlineHelpText>
        <label>Orders Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Group_Name__c</fullName>
        <description>StS R8 Field from Atlas: MCAMGMT__MABDFPRDG_T</description>
        <externalDeveloperName>MCAMGMT__MABDFPRDG_T</externalDeveloperName>
        <inlineHelpText>ABB Product Group Name</inlineHelpText>
        <label>Product Group Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <description>StS R8 field from Atlas: MCAMGMT__MABDFPRDG</description>
        <externalDeveloperName>MCAMGMT__MABDFPRDG</externalDeveloperName>
        <inlineHelpText>ABB Product Group</inlineHelpText>
        <label>Product Group</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line_Code__c</fullName>
        <description>StS R8 field from Atlas: MPLPRD008__MPLPRD001_T_M</description>
        <externalDeveloperName>MPLPRD008__MPLPRD001_T_M</externalDeveloperName>
        <inlineHelpText>PL Code</inlineHelpText>
        <label>Product Line Code</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line_Level__c</fullName>
        <description>StS R8 field form Atlas: MPLPRD008__MPLPRD001_T_L</description>
        <externalDeveloperName>MPLPRD008__MPLPRD001_T_L</externalDeveloperName>
        <inlineHelpText>PL Level</inlineHelpText>
        <label>Product Line Level</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Line_Node__c</fullName>
        <description>StS R8 field from Atlas: MPLPRD008__MPLPRD001_T_D</description>
        <externalDeveloperName>MPLPRD008__MPLPRD001_T_D</externalDeveloperName>
        <inlineHelpText>Product line node</inlineHelpText>
        <label>Product Line Node</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <description>StS R8 field from Atlas: MPLPRD008__MPLPRD001_T</description>
        <externalDeveloperName>MPLPRD008__MPLPRD001_T</externalDeveloperName>
        <inlineHelpText>ABB Product Line</inlineHelpText>
        <label>Product Line</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotaledProperties__c</fullName>
        <description>TotaledProperties</description>
        <externalDeveloperName>TotaledProperties</externalDeveloperName>
        <label>TotaledProperties</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <description>StS R8 field from Atlas: A0CALYEAR</description>
        <externalDeveloperName>A0CALYEAR</externalDeveloperName>
        <inlineHelpText>Accounting year</inlineHelpText>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Atlas Order</label>
    <pluralLabel>Atlas Orders</pluralLabel>
</CustomObject>